force-app/main/default/objects/OIP_MetadataIndex__c/OIP_MetadataIndex__c.object-meta.xml
<CustomObject>
    <fullName>OIP_MetadataIndex__c</fullName>
    <label>Metadata Index</label>
    <pluralLabel>Metadata Indices</pluralLabel>
    <nameField>
        <displayFormat>META-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>