force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_ComponentType__c.field-meta.xml
<CustomField>
    <fullName>OIP_ComponentType__c</fullName>
    <label>Component Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>CustomField</fullName>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
            </value>
            <value>
                <fullName>RecordType</fullName>
            </value>
            <value>
                <fullName>PageLayout</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>EmailTemplate</fullName>
            </value>
            <value>
                <fullName>CustomMetadataType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>