force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_CompoundKey__c.field-meta.xml
<CustomField>
    <fullName>OIP_CompoundKey__c</fullName>
    <label>Compound Key</label>
    <type>Formula</type>
    <formula>OIP_ComponentType__c + &apos;||&apos; + OIP_FullName__c</formula>
    <formulaType>Text</formulaType>
    <treatBlanksAs>BlankAsZero</treatBlanksAs>
    <externalId>true</externalId>
</CustomField>