force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_Description__c.field-meta.xml
<CustomField>
    <fullName>OIP_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>