force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_HealthRisk__c.field-meta.xml
<CustomField>
    <fullName>OIP_HealthRisk__c</fullName>
    <label>Health Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>