force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_IndexedAt__c.field-meta.xml
<CustomField>
    <fullName>OIP_IndexedAt__c</fullName>
    <label>Indexed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>