force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_IsActive__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsActive__c</fullName>
    <label>Is Active</label>
    <defaultValue>false</defaultValue>
    <required>true</required>
    <type>Checkbox</type>
</CustomField>