force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_IsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsEncrypted__c</fullName>
    <label>Is Encrypted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>