force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_IsPHI__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsPHI__c</fullName>
    <label>Is PHI</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>