force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_JobRunId__c.field-meta.xml
<CustomField>
    <fullName>OIP_JobRunId__c</fullName>
    <label>Job Run ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>