force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_Label__c.field-meta.xml
<CustomField>
    <fullName>OIP_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>