force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>OIP_LastModifiedById__c</fullName>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OIP_MetadataIndex_ModifiedBy</relationshipName>
    <type>Lookup</type>
</CustomField>