force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OIP_LastModifiedDate__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>