force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>OIP_NamespacePrefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>