force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_OwningObjectId__c.field-meta.xml
<CustomField>
    <fullName>OIP_OwningObjectId__c</fullName>
    <label>Owning Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>