force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_SourceApiVersion__c.field-meta.xml
<CustomField>
    <fullName>OIP_SourceApiVersion__c</fullName>
    <label>Source API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>