force-app/main/default/objects/OIP_MetadataIndex__c/fields/OIP_Status__c.field-meta.xml
<CustomField>
    <fullName>OIP_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Active</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Deprecated</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Draft</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Error</fullName>
        </picklistValues>
    </picklist>
</CustomField>